--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   "author": "Andrew Dekker, Nurmerey Shakhanova",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4"
   }
 }
