--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-express": "^1.4.1",
     "grunt-express-server": "^0.5.2",
+    "mongodb": "^2.2.7",
     "shortid": "^2.2.4"
   },
   "devDependencies": {
