git ignore on .xuserstate

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 iOS/Onetrack.xcodeproj/xcuserdata/nurmerey.xcuserdatad/xcschemes/xcschememanagement.plist
 
 iOS/Onetrack.xcodeproj/project.xcworkspace/xcuserdata/nurmerey.xcuserdatad/UserInterfaceState.xcuserstate
+
+*.xcuserstate
